fix(styles): display `text-truncate` elements as blocks in accordion button

--- a/packages/components/src/components/post-collapsible/post-collapsible.scss
+++ b/packages/components/src/components/post-collapsible/post-collapsible.scss
@@ -3,4 +3,8 @@
 
 :host {
   display: block;
+
+  .accordion-button > ::slotted(.text-truncate) {
+    display: block;
+  }
 }
